# 3D_isin_model

./: .gitignore  CMakeLists.txt  README.md  gnuplot_2D_plot.gp  main.cpp
include/: framework.h  m_lattice.h
src/: framework.cpp  m_lattice.cpp
